# Qt6OutputDisplay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generator.py
src/: display.cpp  display.h  main.cpp
